# xml_file_splitter

./: Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docker_build.yaml  trivy.yml
scripts/: entrypoint.sh
src/: cli.rs  lib.rs  main.rs  splitter.rs  writer.rs
tests/: integration.rs  integration_binary.rs
tests/common/: mod.rs
tests/fixtures/chunk_20/: chunk_00001.xml
tests/fixtures/chunk_4/: chunk_00001.xml  chunk_00002.xml  chunk_00003.xml  chunk_00004.xml
tests/fixtures/chunk_5/: chunk_00001.xml  chunk_00002.xml  chunk_00003.xml
