[package]
name = "xml_file_splitter"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-xml = "0.39.2"
flate2 = "1.0" #{ version = "1.1.9" } # , features = ["gzip"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[lib]
name = "xml_file_splitter"
path = "src/lib.rs"

[[bin]]
name = "xml_file_splitter"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
anyhow   = "1"
