[package]
name = "xml_file_splitter"
version = "0.1.1"
edition = "2024"

[dependencies]
quick-xml = "0.39.2"
flate2 = "1.1"
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0"

[lib]
name = "xml_file_splitter"
path = "src/lib.rs"

[[bin]]
name = "xml_file_splitter"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
anyhow   = "1"
